--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My Webview</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
-  </head>
-  <body class="text-center">
-    <div id="welcome-section">
-      <h1 class="welcome-header">Hello World !!!</h1>
-    </div>
-  </body>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Assignment portal for Christian Edgardo Manrique in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+	<title>My Portal Page</title>
+	<link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+	<div class="page">
+		<header>
+			<div class="head">
+				<img class="image" src="images/ryan_manrique.jpg" width="150" alt="Ryan Manrique">
+				<h1 class="name">Christian Edgardo S. Manrique</h1>
+			</div>
+		</header>
+		<main>
+			<div class="assignment">
+				<h2>WDD 230 : Assignment Portal</h2>
+			</div>
+			<hr>
+			<ul>
+				<li>Lesson 02:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 03:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 04:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 05:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 06:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 07:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 08:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 09:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 10:
+					<a href="#">Title</a>
+				</li>
+				<li>Lesson 11:
+					<a href="#">Title</a>
+				</li>
+			</ul>
+			<hr>
+			<p>Some lessons may need more than one activity/assignment link.</p>
+
+		</main>
+		<footer>
+			<p>©<span id="year"></span> | Christian Edgardo Manrique | Philippines</p>
+			<p>Last Updated: <span id="lastupdate"></span></p>
+		</footer>
+		<script src="./js/script.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+		<script src='./js/webfontload.js'></script>
+
+	</div>
+</body>
+
 </html>
