--- a/index.html
+++ b/index.html
@@ -24,36 +24,16 @@
 			</div>
 			<hr>
 			<ul>
-				<li>Lesson 02:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 03:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 04:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 05:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 06:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 07:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 08:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 09:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 10:
-					<a href="#">Title</a>
-				</li>
-				<li>Lesson 11:
-					<a href="#">Title</a>
-				</li>
+				<li>Lesson 02:<a href="#">Title</a></li>
+				<li>Lesson 03:<a href="#">Title</a></li>
+				<li>Lesson 04:<a href="#">Title</a></li>
+				<li>Lesson 05:<a href="#">Title</a></li>
+				<li>Lesson 06:<a href="#">Title</a></li>
+				<li>Lesson 07:<a href="#">Title</a></li>
+				<li>Lesson 08:<a href="#">Title</a></li>
+				<li>Lesson 09:<a href="#">Title</a></li>
+				<li>Lesson 10:<a href="#">Title</a></li>
+				<li>Lesson 11:<a href="#">Title</a></li>
 			</ul>
 			<hr>
 			<p>Some lessons may need more than one activity/assignment link.</p>
