--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Assignment portal for Christian Edgardo Manrique in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
 	<title>My Portal Page</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/medium.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap" rel="stylesheet">
 </head>
 
 <body>
