--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
     <meta 
       name="description" 
-      content="Cainta Chamber of Commerce. Lesson 3 assignment."
+      content="Cainta Chamber of Commerce. Lesson 3 assignment." />
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -14,15 +14,16 @@
   </head>
   <body>
     <header>
-      <h1>Cainta Chamber of Commerce</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-		      <li><a href=".typography">Typography</a>
-		      <li><a href=".color-scheme">Color Scheme</a>
-          <li><a href=".audience">Audience</a>
-		</li>
-  </header>
+        <h1>Cainta Chamber of Commerce</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Typography</a></li>
+                <li><a href="#">Color Scheme</a></li>
+                <li><a href="#">Audience</a></li>
+            </ul>
+        </nav>
+    </header>
   <main>
     <h2>Site Name</h2>
     <p>Cainta Chamber of Commerce</p>
