--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/normalize.css">
-    <title>Cainta Chamber of Commerce | Home</title>
+    <title>Cainta Chamber of Commerce | Color Scheme</title>
   </head>
   <body>
     <header>
