--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Typography</a></li>
                 <li><a href="#">Color Scheme</a></li>
-                <li><a href="#">Audience</a></li>
+                <li><a href="/lesson3/audience.html">Audience</a></li>
             </ul>
         </nav>
     </header>
