--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -25,17 +25,11 @@
         </nav>
     </header>
   <main>
-    <h2>Site Name</h2>
-    <p>Cainta Chamber of Commerce</p>
-    <h2>Site Purpose</h2>
-    <p>To provide entrepreneurs in Cainta, Rizal an avenue of introduce their products and services through establishing a network of entrepreneurs 
-      that supports the promotion and development of the economy in Cainta.</p> 
-    <h2>Domain</h2>
-    <p>www.caintachamberofcommerce.com</p>
-    <h2>Logo</h2>
-    <img src="/lesson3/images/logo.png">
-  
-</main>
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <p>Paragraphs</p>
+  </main>
 <footer>
 	<p>©<span id="year"></span> | Christian Edgardo Manrique | Philippines</p>
 	<p>Last Updated: <span id="lastupdate"></span></p>
