--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Typography</a></li>
                 <li><a href="#">Color Scheme</a></li>
-                <li><a href="/lesson3/audience.html">Audience</a></li>
+                <li><a href="https://rymaninc.github.io/wdd230/lesson3/audience.html">Audience</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
     <h2>Domain</h2>
     <p>www.caintachamberofcommerce.com</p>
     <h2>Logo</h2>
-    <img src="/lesson3/images/logo.png">
+    <img src="https://rymaninc.github.io/wdd230/lesson3/images/logo.png">
   
 </main>
 <footer>
