--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -17,10 +17,10 @@
         <h1>Cainta Chamber of Commerce</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
                 <li><a href="#">Typography</a></li>
                 <li><a href="#">Color Scheme</a></li>
-                <li><a href="https://rymaninc.github.io/wdd230/lesson3/audience.html">Audience</a></li>
+                <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Audience</a></li>
             </ul>
         </nav>
     </header>
