--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <header>
-        <h1>Cainta Chamber of Commerce</h1>
+        <h2>Cainta Chamber of Commerce</h2>
         <nav>
             <ul>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
-                <li><a href="#">Typography</a></li>
+                <li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
                 <li><a href="#">Color Scheme</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Audience</a></li>
             </ul>
