--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
-                <li><a href="#">Typography</a></li>
+                <li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
                 <li><a href="#">Color Scheme</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Target Audience</a></li>
             </ul>
