--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -19,8 +19,8 @@
 		<nav>
 			<ul>
 				<li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
-				<li><a href="#">Typography</a></li>
-				<li><a href="#">Color Scheme</a></li>
+				<li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
+				<li><a href="https://rymaninc.github.io/wdd230/lesson3/color-scheme.html">Color Scheme</a></li>
 				<li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Audience</a></li>
 			</ul>
 		</nav>
