Updated color scheme

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -49,7 +49,7 @@
     <img src="https://rymaninc.github.io/wdd230/lesson3/images/young-female-entrepreneur.png">
 
     <br>
-    <p>Scenarios</p>
+    <h2>Scenarios</h2>
     <p>Michael Tan Sy is looking for businesses exisiting in Cainta, Rizal that will support the supplies he needed for his
       business expansion. He is also looking for potential partners and small-medium-enterprises that could become
       his partners. In addtion, he is also looking for information about the demographics, traffic conditions, and weather
