--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			</div>
 			<hr>
 			<ul>
-				<li>Lesson 02:<a href="https://rymaninc.github.io/wdd230/lesson2/design-principles.html">Design Principles</a></li>
-				<li>Lesson 03:<a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Website Planning</a></li>
+				<li>Lesson 02:<a href="#">Title</a></li>
+				<li>Lesson 03:<a href="#">Title</a></li>
 				<li>Lesson 04:<a href="#">Title</a></li>
 				<li>Lesson 05:<a href="#">Title</a></li>
 				<li>Lesson 06:<a href="#">Title</a></li>
