--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -47,7 +47,7 @@
 			</div>
 		</main>
 		<footer>
-			<p>©<span id="year"></span> | Christian Edgardo Manrique | Philippines</p>
+			<p>©<span id="year"></span> | Christian Edgardo S. Manrique | Philippines</p>
 			<p>Last Updated: <span id="lastupdate"></span></p>
 		</footer>
 		<script src="./js/script.js"></script>
