Updated HTML for lesson 2

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -51,8 +51,8 @@
 			<p>Last Updated: <span id="lastupdate"></span></p>
 		</footer>
 		<script src="./js/script.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-		<script src='./js/webfontload.js'></script>
+		<!--script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+		<script src='./js/webfontload.js'></script-->
 
 	</div>
 </body>
