--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
     <meta 
       name="description" 
-      content="Cainta Chamber of Commerce. Lesson 3 assignment." />
+      content="Aurora Chamber of Commerce. Lesson 3 assignment." />
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/normalize.css">
-    <title>Cainta Chamber of Commerce | Home</title>
+    <title>Aurora Chamber of Commerce | Home</title>
   </head>
   <body>
     <header>
-        <h2>Cainta Chamber of Commerce</h2>
+        <h2>Aurora Chamber of Commerce</h2>
         <nav>
             <ul>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
@@ -26,12 +26,12 @@
     </header>
   <main>
     <h2>Site Name</h2>
-    <p>Cainta Chamber of Commerce</p>
+    <p>Aurora Chamber of Commerce</p>
     <h2>Site Purpose</h2>
-    <p>To provide entrepreneurs in Cainta, Rizal an avenue of introduce their products and services through establishing a network of entrepreneurs 
-      that supports the promotion and development of the economy in Cainta.</p> 
+    <p>To provide entrepreneurs the different towns of the province of Aurora, Philippines an avenue of showcase tourism and promotion of their products and services through establishing a network of entrepreneurs and investors 
+      that supports the promotion and development of the economy in Aurora.</p> 
     <h2>Domain</h2>
-    <p>www.caintachamberofcommerce.com</p>
+    <p>www.auroraphchamberofcommerce.com</p>
     <h2>Logo</h2>
     <img src="https://rymaninc.github.io/wdd230/lesson3/images/logo.png">
   
