--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,14 +28,14 @@
     <h2>Site Name</h2>
     <p>Aurora Chamber of Commerce</p>
     <h2>Site Purpose</h2>
-    <p>To provide entrepreneurs the different towns of the province of Aurora, Philippines an avenue of showcase tourism and promotion of their products and services through establishing a network of entrepreneurs and investors 
-      that supports the promotion and development of the economy in Aurora.</p> 
+    <p>To provide entrepreneurs from the different towns of Aurora, Philippines an avenue of showcase tourism and promotion of their products and services through establishing a network of entrepreneurs and investors 
+      that supports the promotion and economic development of the province.</p> 
     <h2>Domain</h2>
     <p>www.auroraphchamberofcommerce.com</p>
     <h2>Logo</h2>
-    <img src="https://rymaninc.github.io/wdd230/lesson3/images/logo.png">
-  
-</main>
+    <!--<img src="https://rymaninc.github.io/wdd230/lesson3/images/logo.png">-->
+    <img src="./images/logo.png"
+  </main>
 <footer>
 	<p>©<span id="year"></span> | Christian Edgardo Manrique | Philippines</p>
 	<p>Last Updated: <span id="lastupdate"></span></p>
