Site plan updated

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="./css/medium.css">
 	<link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/color-scheme.css">
-	<title>Cainta Chamber of Commerce | Color Scheme</title>
+	<title>Aurora Chamber of Commerce | Color Scheme</title>
 </head>
 
 <body>
 	<header>
-		<h1>Cainta Chamber of Commerce</h1>
+		<h1>Aurora Chamber of Commerce</h1>
 		<nav>
 			<ul>
 				<li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
