--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,8 +28,7 @@
     <h2>Site Name</h2>
     <p>Aurora Chamber of Commerce</p>
     <h2>Site Purpose</h2>
-    <p>To provide entrepreneurs from the different towns of Aurora, Philippines an avenue of showcase tourism and promotion of their products and services through establishing a network of entrepreneurs and investors 
-      that supports the promotion and economic development of the province.</p> 
+    <p>To provide entrepreneurs from the different towns of Aurora, Philippines, an avenue of showcasing tourism and promoting their products and services through establishing a network of entrepreneurs and investors that supports the promotion and economic development of the province.</p> 
     <h2>Domain</h2>
     <p>www.auroraphchamberofcommerce.com</p>
     <h2>Logo</h2>
