Added site plan

--- a/lesson3/site-plan.html
+++ b/lesson3/site-plan.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/normalize.css">
-    <title>Aurora Chamber of Commerce | Home</title>
+    <title>Aurora Chamber of Commerce | Site Plan</title>
   </head>
   <body>
     <header>
@@ -20,22 +20,18 @@
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/index.html">Home</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/color-scheme.html">Color Scheme</a></li>
-                <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Audience</a></li>
+                <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Target Audience</a></li>
                 <li><a href="./site-plan.html">Site Plan</a></li>
             </ul>
         </nav>
     </header>
   <main>
-    <h2>Site Name</h2>
-    <p>Aurora Chamber of Commerce</p>
-    <h2>Site Purpose</h2>
-    <p>To provide entrepreneurs from the different towns of Aurora, Philippines, an avenue of showcasing tourism and promoting their products and services through establishing a network of entrepreneurs and investors that supports the promotion and economic development of the province.</p> 
-    <h2>Domain</h2>
-    <p>www.auroraphchamberofcommerce.com</p>
-    <h2>Logo</h2>
-    <!--<img src="https://rymaninc.github.io/wdd230/lesson3/images/logo.png">-->
-    <img src="./images/logo.png">
-  </main>
+    <h2>Site Plan</h2>
+    <p>This will be the site plan of Aurora Chamber of Commerce</p> 
+    <img src="./images/wireframe.JPG">
+    
+    
+</main>
 <footer>
 	<p>©<span id="year"></span> | Christian Edgardo Manrique | Philippines</p>
 	<p>Last Updated: <span id="lastupdate"></span></p>
