--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<hr>
 			<ul>
 				<li>Lesson 02:<a href="/wdd230/lesson2/design-principles.html">Design Principles</a></li>
-				<li>Lesson 03:<a href="#">Title</a></li>
+				<li>Lesson 03:<a href="/wdd230/lesson3/index.html">Website Planning Document</a></li>
 				<li>Lesson 04:<a href="#">Title</a></li>
 				<li>Lesson 05:<a href="#">Title</a></li>
 				<li>Lesson 06:<a href="#">Title</a></li>
