--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -22,6 +22,7 @@
 				<li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
 				<li><a href="https://rymaninc.github.io/wdd230/lesson3/color-scheme.html">Color Scheme</a></li>
 				<li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Audience</a></li>
+				<li><a href="./site-plan.html">Site Plan</a></li>
 			</ul>
 		</nav>
 	</header>
