--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -21,6 +21,7 @@
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/color-scheme.html">Color Scheme</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Target Audience</a></li>
+                <li><a href="./site-plan.html">Site Plan</a></li>
             </ul>
         </nav>
     </header>
