--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -21,7 +21,8 @@
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/typography.html">Typography</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/color-scheme.html">Color Scheme</a></li>
                 <li><a href="https://rymaninc.github.io/wdd230/lesson3/target-audience.html">Audience</a></li>
-            </ul>
+                <li><a href="./site-plan.html">Site Plan</a></li>
+              </ul>
         </nav>
     </header>
   <main>
