Updated site plan

--- a/lesson3/site-plan.html
+++ b/lesson3/site-plan.html
@@ -27,9 +27,16 @@
     </header>
   <main>
     <h2>Site Plan</h2>
-    <p>This will be the site plan of Aurora Chamber of Commerce</p> 
-    <img src="./images/wireframe.JPG">
-    
+    <p>Home Page</p> 
+    <img src="./images/1-Homepage.png">
+    <p>Membership</p> 
+    <img src="./images/2-Membership.png">
+    <p>Events</p> 
+    <img src="./images/3-Events.png">
+    <p>Destinations</p> 
+    <img src="./images/4-Destinations.png">
+    <p>About Us</p> 
+    <img src="./images/5-About-Us.png">
     
 </main>
 <footer>
