Updated the wires

--- a/lesson3/site-plan.html
+++ b/lesson3/site-plan.html
@@ -28,15 +28,15 @@
   <main>
     <h2>Site Plan</h2>
     <p>Home Page</p> 
-    <img src="./images/1-Homepage.png">
+    <img src="./images/1-Homepage.png" alt="Homepage">
     <p>Membership</p> 
-    <img src="./images/2-Membership.png">
+    <img src="./images/2-Membership.png" alt="Membership page">
     <p>Events</p> 
-    <img src="./images/3-Events.png">
+    <img src="./images/3-Events.png" alt="Site PLan for events and programs">
     <p>Destinations</p> 
-    <img src="./images/4-Destinations.png">
+    <img src="./images/4-Destinations.png" alt="Site plan for destinations">
     <p>About Us</p> 
-    <img src="./images/5-About-Us.png">
+    <img src="./images/5-About-Us.png" alt="About us">
     
 </main>
 <footer>
@@ -45,7 +45,7 @@
 </footer>
 <script src="./js/script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script src='./js/webfontload.js'></script>
+<!--<script src='./js/webfontload.js'></script>-->
 
 </div>
 </body>
