--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -65,7 +65,7 @@
 </footer>
 <script src="./js/script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script src='./js/webfontload.js'></script>
+<!--<script src='./js/webfontload.js'></script>-->
 
 </div>
 </body>
