--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
     <meta 
       name="description" 
-      content="Aurora Chamber of Commerce. Lesson 3 assignment." />
+      content="Aurora Chamber of Commerce. Lesson 3 assignment.">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -34,7 +36,7 @@
     <p>www.auroraphchamberofcommerce.com</p>
     <h2>Logo</h2>
     <!--<img src="https://rymaninc.github.io/wdd230/lesson3/images/logo.png">-->
-    <img src="./images/logo.png">
+    <img src="./images/logo.png" alt="Aurora Chamber of Commerce logo">
   </main>
 <footer>
 	<p>©<span id="year"></span> | Christian Edgardo Manrique | Philippines</p>
@@ -42,7 +44,7 @@
 </footer>
 <script src="./js/script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script src='./js/webfontload.js'></script>
+<!--<script src='./js/webfontload.js'></script>-->
 
 </div>
 </body>
