--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Cainta Chamber of Commerce. Lesson 3 assignment." />
+	<meta name="description" content="Cainta Chamber of Commerce. Lesson 3 assignment.">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="./css/small.css">
 	<link rel="stylesheet" href="./css/medium.css">
