Added alternative descriptions of images.

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -38,7 +38,7 @@
     <p><strong>Demographics:</strong> Age is 58 years old, post graduate degree holder, former politician, and family is known in the business industry for decades. </p>
     <p><strong>Goals and task to complete from the site: </strong>Establish network among with the business owners, entrepreneurs, and potential business partners.</p>
     <p><strong>Environment: </strong>Physical environment is demanding that requires a lot of time management. Social environment is mostly extrovert due to frequent business meetings, travel, and networking. Uses high-end devices and fast internet connections.</p>
-    <img src="https://rymaninc.github.io/wdd230/lesson3/images/Businessman_asian_male.png">
+    <img src="https://rymaninc.github.io/wdd230/lesson3/images/Businessman_asian_male.png" alt="Picture of an asian male with glasses holding a cellphone.">
     
     <br>
     <p>Tourist</p>
@@ -47,7 +47,7 @@
     <p><strong>Demographics:</strong> Age is 25 years old, completed an undergraduate degree in management, Filipino, and a regular tourist travelling the Philippines for content creation.</p>
     <p><strong>Goals and task to complete from the site: </strong>Promote the tourist destinations in Aurora province through vlogs and other online contents.</p>
     <p><strong>Environment: </strong>Spend most of her weekend travelling to coastal areas and visiting resorts that are not popular. She is very adept to technology, mostly mobile, and high end devices and fast internet connections.</p>
-    <img src="https://rymaninc.github.io/wdd230/lesson3/images/young-female-entrepreneur.png">
+    <img src="https://rymaninc.github.io/wdd230/lesson3/images/young-female-entrepreneur.png" alt="Picture of a woman on mid 20s wearing an eye glasses and a blue blouse">
 
     <br>
     <h2>Scenarios</h2>
